--- a/src/TextRazor.Net/project.json
+++ b/src/TextRazor.Net/project.json
@@ -1,6 +1,9 @@
 {
   "version": "1.0.0-*",
 
+  "name":"TextRazor.NET",
+  "description":"A .NET library for accessing TextRazor over REST.",
+
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1"
