--- a/src/TextRazor.Net/project.json
+++ b/src/TextRazor.Net/project.json
@@ -1,6 +1,5 @@
 {
   "version": "1.0.0-*",
-
   "name":"TextRazor.NET",
   "description": "A .NET library for accessing TextRazor over REST.",
   "authors": [ "Chris Skardon" ],
@@ -15,13 +14,13 @@
       "url": "http://www.github.com/cskardon/TextRazor.NET"
     }
   },
-
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1"
   },
 
   "frameworks": {
+    "net45": {}, 
     "netstandard1.3": {
       "imports": "dnxcore50"
     }
