--- a/src/TextRazor.Net/TextRazor.Net.csproj
+++ b/src/TextRazor.Net/TextRazor.Net.csproj
@@ -5,10 +5,35 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
+    <PackageId>TextRazor.NET</PackageId>
+    <Authors>Chris Skardon</Authors>
+    <Company>Anabranch Ltd</Company>
+    <Product>TextRazor.NET</Product>
+    <Description>A .NET Library to access TextRazor over REST.</Description>
+    <Copyright>Copyright (C) 2019 Chris Skardon</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>http://www.github.com/cskardon/TextRazor.NET</PackageProjectUrl>
+    <RepositoryUrl>http://www.github.com/cskardon/TextRazor.NET</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
+    <PackageTags>TextRazor, Core</PackageTags>
+    <PackageIcon>icon.ico</PackageIcon>
+    <PackageIconUrl />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\icon.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
