--- a/src/TextRazor.Net/TextRazor.Net.csproj
+++ b/src/TextRazor.Net/TextRazor.Net.csproj
@@ -16,9 +16,14 @@
     <RepositoryUrl>http://www.github.com/cskardon/TextRazor.NET</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageTags>TextRazor, Core</PackageTags>
-    <PackageIcon>icon.ico</PackageIcon>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <VersionPrefix>1.0.0</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\icon.ico">
+    <None Include="..\..\icon.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
